# ai-helpers

./: LICENSE  README.md  pyproject.toml
ai_helpers/: cli.py
ai_helpers/commands/: generate_shell_command.py
