[tool.poetry]
name = "ai-helpers"
version = "0.1.0"
description = "A set of helpers to use OpenAI models from the command line for an improved workflow"
authors = ["Brennan Holzer <brennan.holzer@gmail.com>"]
readme = "README.md"
packages = [{include = "ai_helpers"}]

[tool.poetry.scripts]
ai-helpers = "ai_helpers.cli:cli"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^0.27.2"
click = "^8.1.3"
click-aliases = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
